# company-web-scraper

./: .gitignore  README.md  example_run.py  pyproject.toml  requirements.txt  scraper.py
tests/: test_scraper.py
