[project]
name = "company-web-scraper"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "curl_cffi>=0.10",
    "trafilatura>=1.12",
    "lxml",
    "pandas",
    "playwright",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "pytest",
]

[tool.uv]
package = false
